<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".HomeActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7974000105622544/8236468381"
        app:layout_constraintBottom_toTopOf="@+id/TesterApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TesterApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almaroseboldd"
        android:text="@string/alpha_app"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/calculator"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="62dp"
        android:clickable="true"
        android:contentDescription="@string/calculator"
        android:scaleType="fitCenter"
        android:src="@drawable/mathematics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TesterApp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almaroseboldd"
        android:padding="5dp"
        android:text="@string/calculator"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/temperature"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="62dp"
        android:clickable="true"
        android:contentDescription="@string/temperature"
        android:scaleType="fitCenter"
        android:src="@drawable/thermometercolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculator"
        app:layout_constraintTop_toBottomOf="@+id/TesterApp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almaroseboldd"
        android:padding="5dp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/scale"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="62dp"
        android:clickable="true"
        android:contentDescription="@string/weight"
        android:scaleType="fitCenter"
        android:src="@drawable/scale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almaroseboldd"
        android:padding="5dp"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:contentDescription="@string/button_me"
        android:fontFamily="@font/almaroseboldd"
        android:textColor="@color/blue_sky"
        android:background="@drawable/rounded"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScale"
        app:layout_constraintVertical_bias="0.85"/>

</androidx.constraintlayout.widget.ConstraintLayout>